
- BCmath:
  . Fixed bug #60377 (bcscale related crashes on 64bits platforms). (shm)

- Date:
  . Fixed bug #60373 (Startup errors with log_errors on cause segfault).
    (Derick)
  . Fixed bug #60236 (TLA timezone dates are not converted properly from
    timestamp). (Derick)
  . Fixed bug #55253 (DateTime::add() and sub() result -1 hour on objects with
    time zone type 2). (Derick)
  . Fixed bug #54596 (incorrect years for DateTime objects created with 4-digit
    years). (Derick)

- EXIF:
  . Fixed bug #60150 (Integer overflow during the parsing of invalid exif
    header). (Stas, flolechaud at gmail dot com)
    
- Fileinfo:
  . Fixed possible memory leak in finfo_open(). (Felipe)
  . Fixed memory leak when calling the Finfo constructor twice. (Felipe)

- Intl:
  . Fixed bug #60192 (SegFault when Collator not constructed
    properly). (Florian)
  . Fixed memory leak in several Intl locale functions. (Felipe)

- Gd:
  . Fixed bug #60160 (imagefill() doesn't work correctly
    for small images). (Florian)
    
- Mbstring:
  . Fixed possible crash in mb_ereg_search_init() using empty pattern. (Felipe)
    
- MS SQL:
  . Fixed bug #60267 (Compile failure with freetds 0.91). (Felipe)

- OpenSSL:
  . Fixed bug #60279 (Fixed NULL pointer dereference in
    stream_socket_enable_crypto, case when ssl_handle of session_stream is not
    initialized.) (shm)

- Oracle Database extension (OCI8):
  . Fixed bug #59985 (show normal warning text for OCI_NO_DATA).
    (Chris Jones)
    
- Phar:
  . Fixed bug #60261 (NULL pointer dereference in phar). (Felipe)
  . Fixed bug #60164 (Stubs of a specific length break phar_open_from_fp
    scanning for __HALT_COMPILER). (Ralph Schindler)

- Postgres:
  . Fixed bug #60244 (pg_fetch_* functions do not validate that row param 
    is >0). (Ilia)

- SOAP
  . Fixed bug #48216 (PHP Fatal error: SOAP-ERROR: Parsing WSDL:
    Extra content at the end of the doc, when server uses chunked transfer